# Agentic-HX

./: .gitignore  README.md  TESTING.md  alembic.ini  main.py  pyproject.toml  run.py  run_tests.py  setup.py  setup_database.sh  test_api.py  test_manual.py  test_simple_api.py
alembic/: env.py
src/: __init__.py
src/application/: README.md  __init__.py
src/application/dtos/: README.md  user_dto.py
src/application/services/: README.md  __init__.py  user_service.py
src/domain/: README.md  __init__.py
src/domain/entities/: README.md  user.py
src/domain/repositories/: README.md  user_repository.py
src/domain/services/: README.md  __init__.py  user_domain_service.py
src/domain/value_objects/: README.md  email.py  user_id.py
src/infrastructure/: README.md  __init__.py
src/infrastructure/adapters/: README.md  __init__.py  user_repository_impl.py
src/infrastructure/configs/: config_init.py  loggers.py
src/infrastructure/database/: README.md  config.py  connection.py
src/infrastructure/database/models/: user_model.py
src/infrastructure/external_apis/: README.md  email_service.py  smtp_email_service.py
src/presentation/: README.md  __init__.py  dependencies.py
src/presentation/api/: app.py
src/presentation/handlers/: user_handler.py
src/presentation/rest/api/: README.md  app.py
src/presentation/rest/handlers/: README.md  __init__.py
src/presentation/websockets/: websocket_server.py
tests/: README.md
tests/e2e/: README.md
tests/integration/: README.md  test_user_service.py
tests/unit/: README.md  test_email_value_object.py  test_user_entity.py
